# question_tool

./: .env.example  Cargo.toml  MEMORY_OPTIMIZATION.md  build.rs  temp.md
.github/workflows/: rust.yml
doc/: docu.typ
icon/: font_chars.txt  print_font.py
src/: main.rs  main.slint
src/app/: app_state.rs  clipboard_timer.rs  event_handlers.rs  llm_settings.rs  mod.rs
src/core/: clipboard_monitor.rs  github_backend.rs  gpt_backend.rs  llm_backend.rs  logger.rs  mod.rs  question_type.rs  utility.rs
src/ui/: app_settings.slint  side_bar.slint
src/ui/pages/: about.slint  complete_question.slint  listening_compound.slint  listening_single.slint  muti_tiankong.slint  page.slint  page_chat.slint  pages.slint  reading.slint  setting.slint  single_choice.slint  test.slint  wan_xing_tiankong.slint  wan_xing_tiankong_note.slint
src/ui/pages/填空/: 填空_多个小题.slint  通用语篇填空.slint
