[package]
name = "question_tool"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
arboard = "3.6.1"
async-llm = "0.1.4"
async-trait = "0.1.83"
base64 = "0.22.1"
dirs = "5.0.1"
dotenvy = "0.15.7"
image = "0.25.8"
once_cell = "1.21.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
slint = {version="1.13.1",features = ["renderer-femtovg", "backend-winit"]}
syntect = "5.3.0"
tokio = "1.47.1"
tokio-stream = "0.1.17"
tracing = {version = "0.1.41",features = ["async-await"]}
tracing-subscriber = {version = "0.3.20",features = ["env-filter","chrono"]}
uuid = { version = "1.18.1", features = ["v4"] }



[build-dependencies]
slint-build = "1.13.1"




[profile.release]
opt-level = 3            # 最高级别编译优化
lto = "fat"              # 启用全程序链接优化（Link Time Optimization）
codegen-units = 1        # 降低并行单元数量，让 LLVM 有更多全局优化机会
panic = "abort"          # 避免展开栈，提高性能 & 减少体积
strip = "symbols"        # 去除调试符号
debug = false            # 不生成调试信息
overflow-checks = false  # 关闭溢出检查（性能提升）
rpath = false            # 不嵌入运行库路径
