[package]
name = "question_tool"
version = "1.2.0"
edition = "2024"
# build = "build.rs"

[dependencies]
arboard = "3.6.1"
async-llm = "0.1.4"
async-trait = "0.1.83"
base64 = "0.22.1"
dirs = "5.0.1"
dotenvy = "0.15.7"
image = { version = "0.25.8", default-features = false, features = ["png"] }
once_cell = "1.21.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
slint = { version = "1.14.1", features = [] }
tokio = { version = "1.47.1", features = ["sync", "rt", "macros"] }
tokio-stream = "0.1.17"
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1",default-features = false,features = ["v4"] }


[build-dependencies]
slint-build = "1.14.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"


[profile.release]
opt-level = 3           # 最高级别编译优化
lto = "fat"             # 启用全程序链接优化（Link Time Optimization）
codegen-units = 1       # 降低并行单元数量，让 LLVM 有更多全局优化机会
incremental = false     # 禁用增量编译以获得更稳定的全量优化
debug-assertions = false # 关闭 debug 断言以减少运行时开销
panic = "abort"         # 避免展开栈，提高性能 & 减少体积
strip = "symbols"       # 去除调试符号
debug = false           # 不生成调试信息
overflow-checks = false # 关闭溢出检查（性能提升）
rpath = false           # 不嵌入运行库路径
